--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <style>
-            body {
-                  margin: 0;
-                  padding: 0;
-            }
-            header {
-                  background-color: #FF0000;
-                  height: 70px;
-                  width: 100%;
-            }
-            footer {
-                  background-color: #00FF00;
-                  height: 60px;
-                  width: 100%;
-                  bottom: 0;
-                  position: fixed;
-                  display: flex;
-                  justify-content: center;
-                  line-height: 60px;
-            }
-      </style>
-      <title>AirBnB clone</title>
-</head>
-
-<body>
-      <header></header>
-      <footer>Best School</footer>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>AirBnb Clone</title>
+    <style>
+      body {margin: 0; padding: 0;}
+      header {width: 100%; background-color: #FF0000; height: 70px;}
+      footer {position: fixed; bottom: 0; width: 100%; background-color: #00FF00; height: 60px;}
+      footer p {text-align: center; margin: 20px;}
+    </style>
+  </head>
+  <body>
+    <header>
+    </header>
+    <footer>
+      <p>
+        Holberton School
+      </p>
+    </footer>
+  </body>
 </html>
