--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-      <link rel="stylesheet" href="styles/2-common.css" type="text/css">
-      <link rel="stylesheet" href="styles/2-footer.css" type="text/css">
-      <link rel="stylesheet" href="styles/2-header.css" type="text/css">
-      <title>AirBnB clone</title>
-</head>
-
-<body>
-      <header></header>
-      <footer>Best School</footer>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <title>AirBnb Clone</title>
+    <link rel="stylesheet" href="styles/2-common.css">
+    <link rel="stylesheet" href="styles/2-header.css">
+    <link rel="stylesheet" href="styles/2-footer.css">
+  </head>
+  <body>
+    <header>
+    </header>
+    <footer>
+      <p>
+        Holberton School
+      </p>
+    </footer>
+  </body>
 </html>
