--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-      <link rel="stylesheet" href="styles/4-common.css" type="text/css">
-      <link rel="stylesheet" href="styles/3-footer.css" type="text/css">
-      <link rel="stylesheet" href="styles/3-header.css" type="text/css">
-      <link rel="stylesheet" href="styles/5-filters.css" type="text/css">
-      <title>AirBnB clone</title>
-      <link rel="tab icon" href="images/icon.png" type="image/png">
-</head>
-
-<body>
-      <header>
-            <div class="logo"></div>
-      </header>
-      <div class="container">
-            <section class="filters">
-                  <div class="locations">
-                        <h3>States</h3>
-                        <h4>Nairobi, Addisababa</h4>
-                  </div>
-                  <div class="amenities">
-                        <h3>Amenities</h3>
-                        <h4>Shower, Swimming pool</h4>
-                  </div>
-                  <button>Search</button>
-            </section>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/5-filters.css">
+    <link rel="icon" href="images/icon.png" type="image/png">
+    <title>AirBnb Clone</title>
+  </head>
+  <body>
+    <header>
+      <div class="logo">
       </div>
-      <footer>Best School</footer>
-</body>
-
+    </header>
+    <div class="container">
+      <section class="filters">
+        <div class="locations">
+          <h3>States</h3>
+          <h4>California, New York...</h4>
+        </div>
+        <div class="amenities">
+          <h3>Amenities</h3>
+          <h4>Laundry, Internet...</h4>
+        </div>
+        <button>
+          Search
+        </button>
+      </section>
+    </div>
+    <footer>
+      <p>
+        Holberton School
+      </p>
+    </footer>
+  </body>
 </html>
