--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -1,57 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-      <link rel="stylesheet" href="styles/4-common.css" type="text/css">
-      <link rel="stylesheet" href="styles/3-footer.css" type="text/css">
-      <link rel="stylesheet" href="styles/3-header.css" type="text/css">
-      <link rel="stylesheet" href="styles/6-filters.css" type="text/css">
-      <title>AirBnB clone</title>
-      <link rel="tab icon" href="images/icon.png" type="image/png">
-</head>
-
-<body>
-      <header>
-            <div class="logo"></div>
-      </header>
-      <div class="container">
-            <section class="filters">
-                  <div class="locations">
-                        <h3>States</h3>
-                        <h4>Nairobi, Addisababa</h4>
-                        <ul class="popover">
-                              <li>
-                                    <h2>Nairobi</h2>
-                                    <p>One</p>
-                                    <p>Two</p>
-                              </li>
-                              <li>
-                                    <h2>Mombasa</h2>
-                                    <p>One</p>
-                                    <p>two</p>
-                              </li>
-                              <li>
-                                    <h2>Naks</h2>
-                                    <p>One</p>
-                                    <p>Two</p>
-                              </li>
-                        </ul>
-                  </div>
-                  <div class="amenities">
-                        <h3>Amenities</h3>
-                        <h4>Shower, Pool</h4>
-                        <ul class="popover">
-                              <li>
-                                    <p>Shower</p>
-                                    <p>Backyard</p>
-                                    <p>Swimming pool</p>
-                              </li>
-                        </ul>
-                  </div>
-                  <button>Search</button>
-            </section>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="icon" href="images/icon.png" type="image/png">
+    <title>AirBnb Clone</title>
+  </head>
+  <body>
+    <header>
+      <div class="logo">
       </div>
-      <footer>Best School</footer>
-</body>
-
+    </header>
+    <div class="container">
+      <section class="filters">
+        <div class="locations">
+          <h3>States</h3>
+          <h4>California, New York...</h4>
+          <ul class="popover">
+            <li>
+              <h2>California:</h2>
+              <ul>
+                <li>San Francisco</li>
+                <li>Mountain View</li>
+              </ul>
+            </li>
+            <li>
+              <h2>New York:</h2>
+              <ul>
+                <li>Manhattan</li>
+                <li>Brooklyn</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="amenities">
+          <h3>Amenities</h3>
+          <h4>Laundry, Internet...</h4>
+          <ul class="popover">
+            <li>Laundry</li>
+            <li>Internet</li>
+            <li>Television</li>
+            <li>Pool</li>
+          </ul>
+        </div>
+        <button>
+          Search
+        </button>
+      </section>
+    </div>
+    <footer>
+      <p>
+        Holberton School
+      </p>
+    </footer>
+  </body>
 </html>
