--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,117 +1,142 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-      <link rel="stylesheet" href="styles/4-common.css" type="text/css">
-      <link rel="stylesheet" href="styles/3-footer.css" type="text/css">
-      <link rel="stylesheet" href="styles/3-header.css" type="text/css">
-      <link rel="stylesheet" href="styles/6-filters.css" type="text/css">
-      <link rel="stylesheet" href="styles/8-places.css" type="text/css">
-      <title>AirBnB clone</title>
-      <link rel="tab icon" href="images/icon.png" type="image/png">
-</head>
-
-<body>
-      <header>
-            <div class="logo"></div>
-      </header>
-      <div class="container">
-            <section class="filters">
-                  <div class="locations">
-                        <h3>States</h3>
-                        <h4>Kenya, Niger</h4>
-                        <ul class="popover">
-                              <li>
-                                    <h2>Nairobi</h2>
-                                    <p>One</p>
-                                    <p>Two</p>
-                              </li>
-                              <li>
-                                    <h2>Mombasa</h2>
-                                    <p>One</p>
-                                    <p>two</p>
-                              </li>
-                              <li>
-                                    <h2>Naks</h2>
-                                    <p>One</p>
-                                    <p>Two</p>
-                              </li>
-                        </ul>
-                  </div>
-                  <div class="amenities">
-                        <h3>Amenities</h3>
-                        <h4>Shower, Pool</h4>
-                        <ul class="popover">
-                              <li>
-                                    <p>Shower</p>
-                                    <p>Backyard</p>
-                                    <p>Swimming pool</p>
-                              </li>
-                        </ul>
-                  </div>
-                  <button>Search</button>
-            </section>
-            <section class="places">
-                  <h1>Places</h1>
-
-                  <article>
-                        <h2>My home</h2>
-                        <div class="price_by_night">$10</div>
-                        <div class="information">
-                              <div class="max_guest">2 Guests</div>
-                              <div class="number_rooms">1 Bedroom</div>
-                              <div class="number_bathrooms">1 Bathroom</div>
-                        </div>
-                        <div class="user"><b>Owner</b>: Ovec Joe</div>
-                        <div class="description">
-                              This is a lovely 1 bedroom and 1 bathroom apartment that
-                              can accommodate 2 people. It locates at the center of
-                              Kaduna 1,1 stop to People
-                              Square, 2 stops to Bund, 3 stops to Michigan Tower
-                        </div>
-                  </article>
-
-                  <article>
-                        <h2>Tiny house</h2>
-                        <div class="price_by_night">Free</div>
-                        <div class="information">
-                              <div class="max_guest">4 Guests</div>
-                              <div class="number_rooms">2 Bedrooms</div>
-                              <div class="number_bathrooms">1 Bathroom</div>
-                        </div>
-                        <div class="user"><b>Owner</b>: Joe One</div>
-                        <div class="description">
-                              This is the personal residence of Bruce Wayne, who is also the superhero Batman. The
-                              residence is
-                              depicted as a large mansion on the outskirts of Gotham City and is maintained by the Wayne
-                              family's
-                              butler, Joe Ohachor.
-                        </div>
-                  </article>
-
-                  <article>
-                        <h2>A suite</h2>
-                        <div class="price_by_night">$180</div>
-                        <div class="information">
-                              <div class="max_guest">10 Guest</div>
-                              <div class="number_rooms">4 Bedrooms</div>
-                              <div class="number_bathrooms">3 Bath</div>
-                        </div>
-                        <div class="user"><b>Owner</b>: Firdaus Salim</div>
-                        <div class="description">
-                              This is a premium quality room located in the
-                              most important area of New York. It is close to downtown
-                              commerces and has a beatiful sight of central park.
-                              You will have all the amenities you desire and will
-                              definitely enjoy a great time.
-                              By yourself, with your lover, or your family, you will
-                              feel luxury from top to bottom.
-                        </div>
-                  </article>
-
-            </section>
+<html lang="zxx">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/8-places.css">
+    <link rel="icon" href="images/icon.png" type="image/png">
+    <title>AirBnb Clone</title>
+  </head>
+  <body>
+    <header>
+      <div class="logo">
       </div>
-      <footer>Best School</footer>
-</body>
-
+    </header>
+    <div class="container">
+      <section class="filters">
+	<div class="locations">
+	  <h3>States</h3>
+	  <h4>California, New York...</h4>
+	  <ul class="popover">
+	    <li>
+	      <h2>California:</h2>
+	      <ul>
+		<li>San Francisco</li>
+		<li>Mountain View</li>
+	      </ul>
+	    </li>
+	    <li>
+	      <h2>New York:</h2>
+	      <ul>
+		<li>Manhattan</li>
+		<li>Brooklyn</li>
+	      </ul>
+	    </li>
+	  </ul>
+	</div>
+	<div class="amenities">
+	  <h3>Amenities</h3>
+	  <h4>Laundry, Internet...</h4>
+	  <ul class="popover">
+            <li>Laundry</li>
+	    <li>Internet</li>
+	    <li>Television</li>
+	    <li>Pool</li>
+	  </ul>
+	</div>
+	<button>
+	  Search
+	</button>
+      </section>
+      <section class="places">
+	<h1>Places</h1>
+	<article>
+	  <h2>My home</h2>
+	  <div class="price_by_night">
+	    <p>$80</p>
+	  </div>
+	  <div class="information">
+	    <div class="max_guest">
+	      <div class="guest_image"></div>
+	      <p>2 Guests</p>
+	    </div>
+	    <div class="number_rooms">
+	      <div class="bed_image"></div>
+	      <p>1 Bedroom</p>
+	    </div>
+	    <div class="number_bathrooms">
+	      <div class="bath_image"></div>
+	      <p>1 Bathroom</p>
+	    </div>
+	  </div>
+	  <div class="user">
+	    <p><b>Owner: </b>Jon Snow</p>
+	  </div>
+	  <div class="description">
+	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	  </div>
+	</article>
+	<article>
+	  <h2>Tiny house</h2>
+	  <div class="price_by_night">
+	    <p>$65</p>
+	  </div>
+	  <div class="information">
+	    <div class="max_guest">
+	      <div class="guest_image"></div>
+	      <p>4 Guests</p>
+	    </div>
+	    <div class="number_rooms">
+	      <div class="bed_image"></div>
+	      <p>2 Bedroom</p>
+	    </div>
+	    <div class="number_bathrooms">
+	      <div class="bath_image"></div>
+	      <p>1 Bathroom</p>
+	    </div>
+	  </div>
+	  <div class="user">
+	    <p><b>Owner: </b>Daenerys Targaryen</p>
+	  </div>
+	  <div class="description">
+	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	  </div>
+	</article>
+	<article>
+	  <h2>A suite</h2>
+	  <div class="price_by_night">
+	    <p>$190</p>
+	  </div>
+	  <div class="information">
+	    <div class="max_guest">
+	      <div class="guest_image"></div>
+	      <p>6 Guests</p>
+	    </div>
+	    <div class="number_rooms">
+	      <div class="bed_image"></div>
+	      <p>3 Bedroom</p>
+	    </div>
+	    <div class="number_bathrooms">
+	      <div class="bath_image"></div>
+	      <p>2 Bathroom</p>
+	    </div>
+	  </div>
+	  <div class="user">
+	    <p><b>Owner: </b>Azor Ahai</p>
+	  </div>
+	  <div class="description">
+	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	  </div>
+	</article>
+      </section>
+    </div>
+    <footer>
+      <p>
+	Holberton School
+      </p>
+    </footer>
+  </body>
 </html>
